add new website from server na

--- a/xem-phim-moi/thoa-thuan-voi-ac-quy/index.html
+++ b/xem-phim-moi/thoa-thuan-voi-ac-quy/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1782,40 +1782,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/am-vuc-chet" title="Âm Vực Chết">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-nga-re-khac" title="Những ngã rẽ khác">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/am-vuc-chet-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-nga-re-khac-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Âm Vực Chết
+             Những ngã rẽ khác
             </span>
             <span class="list-top-movie-item-en">
-             Sound of Silence
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-way-back" title="The Way Back">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-way-back-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             The Way Back
-            </span>
-            <span class="list-top-movie-item-en">
-             The Way Back
+             The Roads Not Taken
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1826,18 +1804,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhan-danh-cong-ly" title="Nhân Danh Công Lý">
+          <a class="list-top-movie-link" href="/phim-moi/tram-truong" title="Trạm Trưởng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhan-danh-cong-ly-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tram-truong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhân Danh Công Lý
+             Trạm Trưởng
             </span>
             <span class="list-top-movie-item-en">
-             The Lincoln Lawyer
+             Chief of Station
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1848,18 +1826,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/quai-vat-cau-chuyen-ve-lyle-va-erik-menendez" title="Quái Vật: Câu Chuyện Về Lyle Và Erik Menendez">
+          <a class="list-top-movie-link" href="/phim-moi/chuong-trinh-cua-cac-co-nang-nguc-khung" title="Chương Trình Của Các Cô Nàng Ngực Khủng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quai-vat-cau-chuyen-ve-lyle-va-erik-menendez-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuong-trinh-cua-cac-co-nang-nguc-khung-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Quái Vật: Câu Chuyện Về Lyle Và Erik Menendez
+             Chương Trình Của Các Cô Nàng Ngực Khủng
             </span>
             <span class="list-top-movie-item-en">
-             Monsters
+             젖스타그램 : 무삭제
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1870,18 +1848,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hiem-hoa-rung-chet" title="Hiểm Họa Rừng Chết">
+          <a class="list-top-movie-link" href="/phim-moi/thieu-nu-tri-mang" title="Thiếu Nữ Trí Mạng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hiem-hoa-rung-chet-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nu-tri-mang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hiểm Họa Rừng Chết
+             Thiếu Nữ Trí Mạng
             </span>
             <span class="list-top-movie-item-en">
-             Jungle
+             Revenge Girl
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hoa-no-tren-cat" title="Hoa Nở Trên Cát">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoa-no-tren-cat-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hoa Nở Trên Cát
+            </span>
+            <span class="list-top-movie-item-en">
+             The Sand Flower
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
