add new website from server na

--- a/xem-phim-moi/thoa-thuan-voi-ac-quy/index.html
+++ b/xem-phim-moi/thoa-thuan-voi-ac-quy/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1782,84 +1782,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-nga-re-khac" title="Những ngã rẽ khác">
+          <a class="list-top-movie-link" href="/phim-moi/tang-vo-cho-canh-sat-de-tron-toi" title="Tặng Vợ Cho Cảnh Sát Để Trốn Tội">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-nga-re-khac-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tang-vo-cho-canh-sat-de-tron-toi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những ngã rẽ khác
+             Tặng Vợ Cho Cảnh Sát Để Trốn Tội
             </span>
             <span class="list-top-movie-item-en">
-             The Roads Not Taken
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tram-truong" title="Trạm Trưởng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tram-truong-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Trạm Trưởng
-            </span>
-            <span class="list-top-movie-item-en">
-             Chief of Station
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuong-trinh-cua-cac-co-nang-nguc-khung" title="Chương Trình Của Các Cô Nàng Ngực Khủng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuong-trinh-cua-cac-co-nang-nguc-khung-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Chương Trình Của Các Cô Nàng Ngực Khủng
-            </span>
-            <span class="list-top-movie-item-en">
-             젖스타그램 : 무삭제
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thieu-nu-tri-mang" title="Thiếu Nữ Trí Mạng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nu-tri-mang-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thiếu Nữ Trí Mạng
-            </span>
-            <span class="list-top-movie-item-en">
-             Revenge Girl
+             여직원 돌려먹기
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1870,21 +1804,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoa-no-tren-cat" title="Hoa Nở Trên Cát">
+          <a class="list-top-movie-link" href="/phim-moi/cau-lac-bo-nhung-ke-mat-ngu" title="Câu Lạc Bộ Những Kẻ Mất Ngủ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoa-no-tren-cat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cau-lac-bo-nhung-ke-mat-ngu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hoa Nở Trên Cát
+             Câu Lạc Bộ Những Kẻ Mất Ngủ
             </span>
             <span class="list-top-movie-item-en">
-             The Sand Flower
+             Insomniacs After School
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chuyen-bay-kinh-hoang" title="Chuyến Bay Kinh Hoàng">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-bay-kinh-hoang-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chuyến Bay Kinh Hoàng
+            </span>
+            <span class="list-top-movie-item-en">
+             Flightplan
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/gai-lua-tinh" title="Gái Lừa Tình">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gai-lua-tinh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Gái Lừa Tình
+            </span>
+            <span class="list-top-movie-item-en">
+             Pabuya
+            </span>
+            <span class="list-top-movie-item-view">
+             5 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nu-sinh-xinh-dep-say-ruou" title="Nữ Sinh Xinh Đẹp Say Rượu">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-sinh-xinh-dep-say-ruou-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Nữ Sinh Xinh Đẹp Say Rượu
+            </span>
+            <span class="list-top-movie-item-en">
+             술 취한 그녀와의 섹스
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
