add new website from server na

--- a/xem-phim-bo/co-chien-me-thanh/index.html
+++ b/xem-phim-bo/co-chien-me-thanh/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1740,40 +1740,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ca-phau-thuat-cua-grey-phan-2" title="Ca Phẫu Thuật Của Grey (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/yeu-de-dai" title="Yêu Dễ Dãi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ca-phau-thuat-cua-grey-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yeu-de-dai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ca Phẫu Thuật Của Grey (Phần 2)
+             Yêu Dễ Dãi
             </span>
             <span class="list-top-movie-item-en">
-             Grey's Anatomy (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             5 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bo-ba-sieu-bua" title="Bộ Ba Siêu Bựa">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bo-ba-sieu-bua-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Bộ Ba Siêu Bựa
-            </span>
-            <span class="list-top-movie-item-en">
-             Grand Masti
+             Club Friday The Series 11: Ruk Mak Ngai
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1784,21 +1762,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bach-ma-hoang-tu" title="Bạch Mã Hoàng Tử">
+          <a class="list-top-movie-link" href="/phim-moi/doi-dac-nhiem-co-dong-doi-tac" title="Đội Đặc Nhiệm Cơ Động – Đối Tác">
            <span class="status">
-            HD Việt Nam
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bach-ma-hoang-tu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-dac-nhiem-co-dong-doi-tac-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bạch Mã Hoàng Tử
+             Đội Đặc Nhiệm Cơ Động – Đối Tác
             </span>
             <span class="list-top-movie-item-en">
-             Bạch Mã Hoàng Tử
+             Tactical Unit - Partners
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1806,21 +1784,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/betty-phan-2" title="Betty (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/dai-lo-mau-vang" title="Đại Lộ Màu Vàng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/betty-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dai-lo-mau-vang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Betty (Phần 2)
+             Đại Lộ Màu Vàng
             </span>
             <span class="list-top-movie-item-en">
-             Betty (Season 2)
+             All That Glitters
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1828,18 +1806,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/an-tu-tren-xe" title="Án Tử Trên Xe">
+          <a class="list-top-movie-link" href="/phim-moi/con-cua-maxine-cau-chuyen-cua-tyler-perry" title="Con của Maxine: Câu chuyện của Tyler Perry">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/an-tu-tren-xe-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/con-cua-maxine-cau-chuyen-cua-tyler-perry-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Án Tử Trên Xe
+             Con của Maxine: Câu chuyện của Tyler Perry
             </span>
             <span class="list-top-movie-item-en">
-             Hard Hit
+             Maxine's Baby: The Tyler Perry Story
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/am-muu-giay-got-nhon" title="Âm mưu giày gót nhọn">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/am-muu-giay-got-nhon-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Âm mưu giày gót nhọn
+            </span>
+            <span class="list-top-movie-item-en">
+             How to Fight in Six Inch Heels
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
