add new website from server na

--- a/xem-phim-bo/niem-niem-nhan-gian-ngoc/index.html
+++ b/xem-phim-bo/niem-niem-nhan-gian-ngoc/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1766,40 +1766,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thu-qua-tien-hoa-con-chua-hieu-chuyen-gi-thi-doi-toi-da-tro-nen-vo-doi" title="Thứ Quả Tiến Hóa: Còn Chưa Hiểu Chuyện Gì Thì Đời Tôi Đã Trở Nên Vô Đối">
+          <a class="list-top-movie-link" href="/phim-moi/ke-thay-doi-thoi-the" title="Kẻ Thay Đổi Thời Thế">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thu-qua-tien-hoa-con-chua-hieu-chuyen-gi-thi-doi-toi-da-tro-nen-vo-doi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-thay-doi-thoi-the-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thứ Quả Tiến Hóa: Còn Chưa Hiểu Chuyện Gì Thì Đời Tôi Đã Trở Nên Vô Đối
+             Kẻ Thay Đổi Thời Thế
             </span>
             <span class="list-top-movie-item-en">
-             The Fruit of Evolution: Before I Knew It, My Life Had It Made, Shinka no Mi -Shiranai Uchi ni Kachigumi Jinsei-
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/fate-kaleid-liner-thieu-nu-ma-phap-illya-2wei-herz" title="Fate/kaleid liner Thiếu nữ ma pháp – Illya 2wei Herz!">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/fatekaleid-liner-thieu-nu-ma-phap-illya-2wei-herz-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Fate/kaleid liner Thiếu nữ ma pháp – Illya 2wei Herz!
-            </span>
-            <span class="list-top-movie-item-en">
-             Fate/kaleid liner プリズマ☆イリヤ ツヴァイヘルツ!
+             Game Changer
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1810,21 +1788,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hieu-trieu-tich" title="Hiểu Triều Tịch">
+          <a class="list-top-movie-link" href="/phim-moi/bulbbul" title="Bulbbul">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hieu-trieu-tich-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bulbbul-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hiểu Triều Tịch
+             Bulbbul
             </span>
             <span class="list-top-movie-item-en">
-             Jade's Fateful Love
+             Bulbbul
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1832,43 +1810,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/power-quyen-luc-canh-sat" title="Power: Quyền lực cảnh sát">
+          <a class="list-top-movie-link" href="/phim-moi/dai-chien-titan-phan-4" title="Đại chiến Titan (Phần 4)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/power-quyen-luc-canh-sat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dai-chien-titan-phan-4-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Power: Quyền lực cảnh sát
+             Đại chiến Titan (Phần 4)
             </span>
             <span class="list-top-movie-item-en">
-             Power
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ung-cu-vien-bi-giat-day" title="Ứng Cử Viên Bị Giật Dây">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ung-cu-vien-bi-giat-day-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ứng Cử Viên Bị Giật Dây
-            </span>
-            <span class="list-top-movie-item-en">
-             The Manchurian Candidate
+             Attack on Titan (Season 4)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/bang-chung-thep-4" title="Bằng Chứng Thép 4">
+           <span class="status">
+            HD Lồng Tiếng
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bang-chung-thep-4-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bằng Chứng Thép 4
+            </span>
+            <span class="list-top-movie-item-en">
+             Forensic Heroes 4
+            </span>
+            <span class="list-top-movie-item-view">
+             17 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/my-vi-ky-duyen" title="Mỹ Vị Kỳ Duyên">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lo-my-vi-ky-duyen-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Mỹ Vị Kỳ Duyên
+            </span>
+            <span class="list-top-movie-item-en">
+             Delicious Destiny
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
